# dradar

./: .gitignore  README.md  pyproject.toml
scripts/: run-super-regular.sh
src/dradar/: api_client.py  capacity.py  cells.py  checkpoints.py  cli.py  doctor.py  github_device.py  identity.py  image_cache.py  leases.py  limits.py  local_config.py  machine.py  manifest.py  pending.py  quota.py  refill.py  resume_agent.py  runloop.py  runner.py  scrub.py  telemetry.py
tests/: conftest.py  test_api_client.py  test_auto_register.py  test_capacity.py  test_cells.py  test_checkout.py  test_checkpoints.py  test_cli_interrupt.py  test_diagnosis.py  test_doctor_platform.py  test_feedback_round2.py  test_github_link.py  test_go_menu.py  test_image_cache.py  test_leases.py  test_limits_probe.py  test_local_config.py  test_login.py  test_machine.py  test_manifest.py  test_multi_agent_usage.py  test_my_submissions.py  test_pending_upload.py  test_quota.py  test_quota_sleep.py  test_refill.py  test_resume_agent.py  test_runner_tools.py  test_scrub.py  test_session_archive.py  test_telemetry.py  test_version.py  test_version_pin.py  test_workers.py
