[project]
name = "dradar"
version = "0.5.14"
description = "DRadar crowdtest client — run DeepSWE benchmark tasks on your own subscription, submit for independent server-side grading"
requires-python = ">=3.11"
dependencies = ["httpx[socks]>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
dradar = "dradar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dradar"]
