[project]
name = "dradar"
version = "0.5.20"
description = "Distributed Radar client — run benchmark tasks locally and submit them for independent server-side grading"
requires-python = ">=3.11"
dependencies = ["httpx[socks]>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
dradar = "dradar.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dradar"]
